weather-forecast-argocd/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-forecast-service
  namespace: weather-forecast-dev
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: weather-forecast
