weather-forecast-argocd/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-forecast-ingress
  namespace: weather-forecast-dev
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: CCHAxcess
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/health-probe-path: /httprequest
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: devapp.cchaxcess.com
      http:
        paths:
        - path: /
          backend:
            service:
              name:  weather-forecast-service
              port:
                number: 80
          pathType: Exact
